EG/ExerciciosParaAvaliacao/Ex5/WebSite/g/cmcParser.java
// $ANTLR 3.4 /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g 2012-06-30 00:21:42

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

package g;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class cmcParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CMC", "COMMENT", "CONCEITO", "CONCEITOS", "ESC_SEQ", "HEX_DIGIT", "ID", "INSTANCIA", "INSTANCIAS", "MAPACONCEITOPROPCONCEITO", "MAPACONCEITOPROPDADOS", "MAPACONCEITOS", "MAPAINSTANCIAPROPCONCEITO", "MAPAINSTANCIAPROPDADOS", "MAPASCONCEITOPROPCONCEITO", "MAPASCONCEITOPROPDADOS", "MAPASCONCEITOS", "MAPASINSTANCIAPROPCONCEITO", "MAPASINSTANCIAPROPDADOS", "OCTAL_ESC", "PROPRIEDADECONCEITO", "PROPRIEDADEDADOS", "PROPRIEDADESCONCEITO", "PROPRIEDADESDADOS", "STRING", "UNICODE_ESC", "WS", "'('", "')'", "','", "';'", "'INT'", "'STRING'"
    };

    public static final int EOF=-1;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int CMC=4;
    public static final int COMMENT=5;
    public static final int CONCEITO=6;
    public static final int CONCEITOS=7;
    public static final int ESC_SEQ=8;
    public static final int HEX_DIGIT=9;
    public static final int ID=10;
    public static final int INSTANCIA=11;
    public static final int INSTANCIAS=12;
    public static final int MAPACONCEITOPROPCONCEITO=13;
    public static final int MAPACONCEITOPROPDADOS=14;
    public static final int MAPACONCEITOS=15;
    public static final int MAPAINSTANCIAPROPCONCEITO=16;
    public static final int MAPAINSTANCIAPROPDADOS=17;
    public static final int MAPASCONCEITOPROPCONCEITO=18;
    public static final int MAPASCONCEITOPROPDADOS=19;
    public static final int MAPASCONCEITOS=20;
    public static final int MAPASINSTANCIAPROPCONCEITO=21;
    public static final int MAPASINSTANCIAPROPDADOS=22;
    public static final int OCTAL_ESC=23;
    public static final int PROPRIEDADECONCEITO=24;
    public static final int PROPRIEDADEDADOS=25;
    public static final int PROPRIEDADESCONCEITO=26;
    public static final int PROPRIEDADESDADOS=27;
    public static final int STRING=28;
    public static final int UNICODE_ESC=29;
    public static final int WS=30;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public cmcParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public cmcParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return cmcParser.tokenNames; }
    public String getGrammarFileName() { return "/opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g"; }


    public static class cmc_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "cmc"
    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:30:1: cmc : conceitos ';' ( propriedadesDados ';' )? ( propriedadesConceito ';' )? mapasConceitos ';' ( mapasConceitoPropDados ';' )? ( mapasConceitoPropConceito ';' )? ( instancias ';' )? ( mapasInstanciaPropDados ';' )? ( mapasInstanciaPropConceito ';' )? -> ^( CMC conceitos ( propriedadesDados )? ( propriedadesConceito )? mapasConceitos ( mapasConceitoPropDados )? ( mapasConceitoPropConceito )? ( instancias )? ( mapasInstanciaPropDados )? ( mapasInstanciaPropConceito )? ) ;
    public final cmcParser.cmc_return cmc() throws RecognitionException {
        cmcParser.cmc_return retval = new cmcParser.cmc_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal2=null;
        Token char_literal4=null;
        Token char_literal6=null;
        Token char_literal8=null;
        Token char_literal10=null;
        Token char_literal12=null;
        Token char_literal14=null;
        Token char_literal16=null;
        Token char_literal18=null;
        cmcParser.conceitos_return conceitos1 =null;

        cmcParser.propriedadesDados_return propriedadesDados3 =null;

        cmcParser.propriedadesConceito_return propriedadesConceito5 =null;

        cmcParser.mapasConceitos_return mapasConceitos7 =null;

        cmcParser.mapasConceitoPropDados_return mapasConceitoPropDados9 =null;

        cmcParser.mapasConceitoPropConceito_return mapasConceitoPropConceito11 =null;

        cmcParser.instancias_return instancias13 =null;

        cmcParser.mapasInstanciaPropDados_return mapasInstanciaPropDados15 =null;

        cmcParser.mapasInstanciaPropConceito_return mapasInstanciaPropConceito17 =null;


        Object char_literal2_tree=null;
        Object char_literal4_tree=null;
        Object char_literal6_tree=null;
        Object char_literal8_tree=null;
        Object char_literal10_tree=null;
        Object char_literal12_tree=null;
        Object char_literal14_tree=null;
        Object char_literal16_tree=null;
        Object char_literal18_tree=null;
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_mapasConceitos=new RewriteRuleSubtreeStream(adaptor,"rule mapasConceitos");
        RewriteRuleSubtreeStream stream_propriedadesDados=new RewriteRuleSubtreeStream(adaptor,"rule propriedadesDados");
        RewriteRuleSubtreeStream stream_propriedadesConceito=new RewriteRuleSubtreeStream(adaptor,"rule propriedadesConceito");
        RewriteRuleSubtreeStream stream_mapasConceitoPropDados=new RewriteRuleSubtreeStream(adaptor,"rule mapasConceitoPropDados");
        RewriteRuleSubtreeStream stream_instancias=new RewriteRuleSubtreeStream(adaptor,"rule instancias");
        RewriteRuleSubtreeStream stream_mapasInstanciaPropConceito=new RewriteRuleSubtreeStream(adaptor,"rule mapasInstanciaPropConceito");
        RewriteRuleSubtreeStream stream_mapasInstanciaPropDados=new RewriteRuleSubtreeStream(adaptor,"rule mapasInstanciaPropDados");
        RewriteRuleSubtreeStream stream_conceitos=new RewriteRuleSubtreeStream(adaptor,"rule conceitos");
        RewriteRuleSubtreeStream stream_mapasConceitoPropConceito=new RewriteRuleSubtreeStream(adaptor,"rule mapasConceitoPropConceito");
        try {
            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:2: ( conceitos ';' ( propriedadesDados ';' )? ( propriedadesConceito ';' )? mapasConceitos ';' ( mapasConceitoPropDados ';' )? ( mapasConceitoPropConceito ';' )? ( instancias ';' )? ( mapasInstanciaPropDados ';' )? ( mapasInstanciaPropConceito ';' )? -> ^( CMC conceitos ( propriedadesDados )? ( propriedadesConceito )? mapasConceitos ( mapasConceitoPropDados )? ( mapasConceitoPropConceito )? ( instancias )? ( mapasInstanciaPropDados )? ( mapasInstanciaPropConceito )? ) )
            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:4: conceitos ';' ( propriedadesDados ';' )? ( propriedadesConceito ';' )? mapasConceitos ';' ( mapasConceitoPropDados ';' )? ( mapasConceitoPropConceito ';' )? ( instancias ';' )? ( mapasInstanciaPropDados ';' )? ( mapasInstanciaPropConceito ';' )?
            {
            pushFollow(FOLLOW_conceitos_in_cmc149);
            conceitos1=conceitos();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_conceitos.add(conceitos1.getTree());

            char_literal2=(Token)match(input,34,FOLLOW_34_in_cmc151); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_34.add(char_literal2);


            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:18: ( propriedadesDados ';' )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==PROPRIEDADEDADOS) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:19: propriedadesDados ';'
                    {
                    pushFollow(FOLLOW_propriedadesDados_in_cmc154);
                    propriedadesDados3=propriedadesDados();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_propriedadesDados.add(propriedadesDados3.getTree());

                    char_literal4=(Token)match(input,34,FOLLOW_34_in_cmc156); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal4);


                    }
                    break;

            }


            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:43: ( propriedadesConceito ';' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==PROPRIEDADECONCEITO) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:44: propriedadesConceito ';'
                    {
                    pushFollow(FOLLOW_propriedadesConceito_in_cmc161);
                    propriedadesConceito5=propriedadesConceito();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_propriedadesConceito.add(propriedadesConceito5.getTree());

                    char_literal6=(Token)match(input,34,FOLLOW_34_in_cmc163); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal6);


                    }
                    break;

            }


            pushFollow(FOLLOW_mapasConceitos_in_cmc168);
            mapasConceitos7=mapasConceitos();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_mapasConceitos.add(mapasConceitos7.getTree());

            char_literal8=(Token)match(input,34,FOLLOW_34_in_cmc170); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_34.add(char_literal8);


            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:91: ( mapasConceitoPropDados ';' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==MAPACONCEITOPROPDADOS) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:92: mapasConceitoPropDados ';'
                    {
                    pushFollow(FOLLOW_mapasConceitoPropDados_in_cmc173);
                    mapasConceitoPropDados9=mapasConceitoPropDados();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_mapasConceitoPropDados.add(mapasConceitoPropDados9.getTree());

                    char_literal10=(Token)match(input,34,FOLLOW_34_in_cmc175); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal10);


                    }
                    break;

            }


            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:121: ( mapasConceitoPropConceito ';' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==MAPACONCEITOPROPCONCEITO) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:122: mapasConceitoPropConceito ';'
                    {
                    pushFollow(FOLLOW_mapasConceitoPropConceito_in_cmc180);
                    mapasConceitoPropConceito11=mapasConceitoPropConceito();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_mapasConceitoPropConceito.add(mapasConceitoPropConceito11.getTree());

                    char_literal12=(Token)match(input,34,FOLLOW_34_in_cmc182); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal12);


                    }
                    break;

            }


            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:154: ( instancias ';' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==INSTANCIA) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:155: instancias ';'
                    {
                    pushFollow(FOLLOW_instancias_in_cmc187);
                    instancias13=instancias();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_instancias.add(instancias13.getTree());

                    char_literal14=(Token)match(input,34,FOLLOW_34_in_cmc189); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal14);


                    }
                    break;

            }


            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:172: ( mapasInstanciaPropDados ';' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==MAPAINSTANCIAPROPDADOS) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:173: mapasInstanciaPropDados ';'
                    {
                    pushFollow(FOLLOW_mapasInstanciaPropDados_in_cmc194);
                    mapasInstanciaPropDados15=mapasInstanciaPropDados();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_mapasInstanciaPropDados.add(mapasInstanciaPropDados15.getTree());

                    char_literal16=(Token)match(input,34,FOLLOW_34_in_cmc196); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal16);


                    }
                    break;

            }


            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:203: ( mapasInstanciaPropConceito ';' )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==MAPAINSTANCIAPROPCONCEITO) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:31:204: mapasInstanciaPropConceito ';'
                    {
                    pushFollow(FOLLOW_mapasInstanciaPropConceito_in_cmc201);
                    mapasInstanciaPropConceito17=mapasInstanciaPropConceito();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_mapasInstanciaPropConceito.add(mapasInstanciaPropConceito17.getTree());

                    char_literal18=(Token)match(input,34,FOLLOW_34_in_cmc203); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal18);


                    }
                    break;

            }


            // AST REWRITE
            // elements: propriedadesConceito, mapasInstanciaPropDados, mapasConceitos, instancias, propriedadesDados, mapasConceitoPropDados, conceitos, mapasConceitoPropConceito, mapasInstanciaPropConceito
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 32:2: -> ^( CMC conceitos ( propriedadesDados )? ( propriedadesConceito )? mapasConceitos ( mapasConceitoPropDados )? ( mapasConceitoPropConceito )? ( instancias )? ( mapasInstanciaPropDados )? ( mapasInstanciaPropConceito )? )
            {
                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:32:5: ^( CMC conceitos ( propriedadesDados )? ( propriedadesConceito )? mapasConceitos ( mapasConceitoPropDados )? ( mapasConceitoPropConceito )? ( instancias )? ( mapasInstanciaPropDados )? ( mapasInstanciaPropConceito )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CMC, "CMC")
                , root_1);

                adaptor.addChild(root_1, stream_conceitos.nextTree());

                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:32:21: ( propriedadesDados )?
                if ( stream_propriedadesDados.hasNext() ) {
                    adaptor.addChild(root_1, stream_propriedadesDados.nextTree());

                }
                stream_propriedadesDados.reset();

                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:32:40: ( propriedadesConceito )?
                if ( stream_propriedadesConceito.hasNext() ) {
                    adaptor.addChild(root_1, stream_propriedadesConceito.nextTree());

                }
                stream_propriedadesConceito.reset();

                adaptor.addChild(root_1, stream_mapasConceitos.nextTree());

                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:32:77: ( mapasConceitoPropDados )?
                if ( stream_mapasConceitoPropDados.hasNext() ) {
                    adaptor.addChild(root_1, stream_mapasConceitoPropDados.nextTree());

                }
                stream_mapasConceitoPropDados.reset();

                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:32:101: ( mapasConceitoPropConceito )?
                if ( stream_mapasConceitoPropConceito.hasNext() ) {
                    adaptor.addChild(root_1, stream_mapasConceitoPropConceito.nextTree());

                }
                stream_mapasConceitoPropConceito.reset();

                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:32:128: ( instancias )?
                if ( stream_instancias.hasNext() ) {
                    adaptor.addChild(root_1, stream_instancias.nextTree());

                }
                stream_instancias.reset();

                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:32:140: ( mapasInstanciaPropDados )?
                if ( stream_mapasInstanciaPropDados.hasNext() ) {
                    adaptor.addChild(root_1, stream_mapasInstanciaPropDados.nextTree());

                }
                stream_mapasInstanciaPropDados.reset();

                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:32:165: ( mapasInstanciaPropConceito )?
                if ( stream_mapasInstanciaPropConceito.hasNext() ) {
                    adaptor.addChild(root_1, stream_mapasInstanciaPropConceito.nextTree());

                }
                stream_mapasInstanciaPropConceito.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "cmc"


    public static class conceitos_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conceitos"
    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:35:1: conceitos : conceito ( ';' conceito )* -> ^( CONCEITOS ( conceito )+ ) ;
    public final cmcParser.conceitos_return conceitos() throws RecognitionException {
        cmcParser.conceitos_return retval = new cmcParser.conceitos_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal20=null;
        cmcParser.conceito_return conceito19 =null;

        cmcParser.conceito_return conceito21 =null;


        Object char_literal20_tree=null;
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_conceito=new RewriteRuleSubtreeStream(adaptor,"rule conceito");
        try {
            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:36:2: ( conceito ( ';' conceito )* -> ^( CONCEITOS ( conceito )+ ) )
            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:36:4: conceito ( ';' conceito )*
            {
            pushFollow(FOLLOW_conceito_in_conceitos249);
            conceito19=conceito();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_conceito.add(conceito19.getTree());

            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:36:13: ( ';' conceito )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==34) ) {
                    int LA8_1 = input.LA(2);

                    if ( (LA8_1==CONCEITO) ) {
                        alt8=1;
                    }


                }


                switch (alt8) {
            	case 1 :
            	    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:36:14: ';' conceito
            	    {
            	    char_literal20=(Token)match(input,34,FOLLOW_34_in_conceitos252); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_34.add(char_literal20);


            	    pushFollow(FOLLOW_conceito_in_conceitos254);
            	    conceito21=conceito();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_conceito.add(conceito21.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            // AST REWRITE
            // elements: conceito
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 37:2: -> ^( CONCEITOS ( conceito )+ )
            {
                // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:37:5: ^( CONCEITOS ( conceito )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CONCEITOS, "CONCEITOS")
                , root_1);

                if ( !(stream_conceito.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_conceito.hasNext() ) {
                    adaptor.addChild(root_1, stream_conceito.nextTree());

                }
                stream_conceito.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "conceitos"


    public static class conceito_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conceito"
    // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:40:1: conceito : CONCEITO '(' STRING ')' -> ^( CONCEITO STRING ) ;
    public final cmcParser.conceito_return conceito() throws RecognitionException {
        cmcParser.conceito_return retval = new cmcParser.conceito_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token CONCEITO22=null;
        Token char_literal23=null;
        Token STRING24=null;
        Token char_literal25=null;

        Object CONCEITO22_tree=null;
        Object char_literal23_tree=null;
        Object STRING24_tree=null;
        Object char_literal25_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_CONCEITO=new RewriteRuleTokenStream(adaptor,"token CONCEITO");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");

        try {
            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:41:2: ( CONCEITO '(' STRING ')' -> ^( CONCEITO STRING ) )
            // /opt/lampp/htdocs/EL/EG/ExerciciosParaAvaliacao/Ex5/Gramatica/cmc.g:41:4: CONCEITO '(' STRING ')'
            {
            CONCEITO22=(Token)match(input,CONCEITO,FOLLOW_CONCEITO_in_conceito277); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CONCEITO.add(CONCEITO22);


            char_literal23=(Token)match(input,31,FOLLOW_31_in_conceito279); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_31.add(char_literal23);


            STRING24=(Token)match(input,STRING,FOLLOW_STRING_in_conceito281); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_STRING.add(STRING24);


            char_literal25=(Token)match(input,32,FOLLOW_32_in_conceito283); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_32.add(char_literal25);

